Fixed typos and added missing commas

--- a/Leitungstheorie.ipynb
+++ b/Leitungstheorie.ipynb
@@ -618,7 +618,7 @@
    "metadata": {},
    "source": [
     "### Betrachtung der stehenden, hin- und rücklaufenden Welle\n",
-    "Die **hinlaufende** Welle ergibts sich aus der Spannung am Eingang der Leitung. Für die grafische Darstellung wird der Realteil berechnet. Um die Zeitabhängigkeit zu erhalten müssen die Gleichungen mit \\$e^{j\\cdot \\omega \\cdot t}$ multipliziert werden."
+    "Die **hinlaufende** Welle ergibts sich aus der Spannung am Eingang der Leitung. Für die grafische Darstellung wird der Realteil berechnet. Um die Zeitabhängigkeit zu erhalten, müssen die Gleichungen mit \\$e^{j\\cdot \\omega \\cdot t}$ multipliziert werden."
    ]
   },
   {
@@ -680,10 +680,10 @@
     "display(Markdown(r'In der abschließenden Form ergibt sich die Gleichung der Spannungswelle auf der Leitung wie folgt.'))\n",
     "UclEq3=Eq(Ucl,Uhc0*(exp(gam*l)+rc0*exp(-gam*l)))\n",
     "display(UclEq3)\n",
-    "display(Markdown('Die hinlaufende Welle am Kabelende, Verbraucherseitig, ergibt sich durch einsetzen von $l=0$'))\n",
+    "display(Markdown('Die hinlaufende Welle am Kabelende (Verbraucherseitig) ergibt sich durch Einsetzen von $l=0$'))\n",
     "Uhc0tEq=Eq(Uhc0t,UhcltEq.rhs.subs({l:0}))\n",
     "display(Uhc0tEq)\n",
-    "display(Markdown('Wird auch diese Gleichung noch eingesetzt so erhält man die endgültige Form, die nun grafisch dargestellt werden kann.'))\n",
+    "display(Markdown('Wird auch diese Gleichung noch eingesetzt, so erhält man die endgültige Form, die nun grafisch dargestellt werden kann.'))\n",
     "UcltEq2 = Eq(Uclt,UclEq3.rhs.subs({Uhc0:Uhc0tEq.rhs}))\n",
     "display(UcltEq2)\n",
     "#display(Markdown('Für die grafische Darstellung wird der Realteil benötigt.'))\n",
@@ -714,14 +714,14 @@
    },
    "outputs": [],
    "source": [
-    "display(Markdown('Die allgemeine Geichung für die stehende Welle wird auf $U_r(l)$ umgeformt.'))\n",
+    "display(Markdown('Die allgemeine Gleichung für die stehende Welle wird auf $U_r(l)$ umgeformt.'))\n",
     "display(UclEq1)\n",
     "UrclEq1 = Eq(Urcl,solve(UclEq1,Urcl)[0])\n",
     "display(UrclEq1)\n",
     "display(Markdown(r'Die Gleichung für die stehende Welle und für die hinlaufende Welle wird eingesetzt.'))\n",
     "UrclEq2 = Eq(Urclt,(UrclEq1.rhs.subs({Ucl:UcltEq2.rhs,Uhcl:UhcltEq.rhs})).simplify())\n",
     "display(UrclEq2)\n",
-    "display(Markdown('Der für die grafische darstellung benötigte Realteil.'))\n",
+    "display(Markdown('Der für die grafische Darstellung benötigte Realteil.'))\n",
     "UrltEq = Eq(Urlt,re(UrclEq2.rhs))\n",
     "display(UrltEq)"
    ]
@@ -735,7 +735,7 @@
     "Für die grafische Darstellung wird der Realteil benötigt.\n",
     "**Alle Werte sind in den SI Einheiten OHNE Einheitenvorsatz angegeben. Winkel sind in Grad angegeben.**\n",
     "```{tip}\n",
-    "Durch anklicken der Rakete rechts oben und anschließendem öffnen des Notebooks in Binder wird das Notebook interaktiv! Verschiedene Ergebnisse für verschiedene Werte können damit betrachtet werden.\n",
+    "Durch Anklicken der Rakete rechts oben und anschließendem Öffnen des Notebooks in Binder wird das Notebook interaktiv! Verschiedene Ergebnisse für verschiedene Werte können damit betrachtet werden.\n",
     "```\n",
     "\n",
     "Die Werte der Leitungsbeläge können aus dem Datenblatt oder durch Messung bestimmt werden. Typische Werte können aus der Tabelle entnommen werden. {cite}`Werteleitungsbeläge`  \n",
@@ -1016,7 +1016,7 @@
     "ax1.invert_xaxis()\n",
     "\n",
     "#y-Axis\n",
-    "ax1.set(ylabel ='Voltage in V')\n",
+    "ax1.set(ylabel ='Spannung in V')\n",
     "y1 = equation_over_time(UhltEq,vals,l_array)\n",
     "y2 = equation_over_time(UrltEq,vals,l_array)\n",
     "y3 = equation_over_time(UcltabsEq,vals,l_array)\n",
@@ -1086,7 +1086,7 @@
    "source": [
     "(Leitungstranformation)=\n",
     "## Leitungstranformation und Leitungsanpassung\n",
-    "Unter Transformation ist zu verstehen wie die Leitung und der Abschluss der Leitung sich auf den Leitungseingang auswirken. Die Betrachtung erfolgt analog zur Vierpoltheorie. Auf die Herleitung der Transformationsgleichung aus der \\$A$ Vierpolmatrix soll an dieser Stelle verzichtet werden. {cite}`Vid3Obermann`"
+    "Unter Transformation ist zu verstehen, wie die Leitung und der Abschluss der Leitung sich auf den Leitungseingang auswirken. Die Betrachtung erfolgt analog zur Vierpoltheorie. Auf die Herleitung der Transformationsgleichung aus der \\$A$ Vierpolmatrix soll an dieser Stelle verzichtet werden. {cite}`Vid3Obermann`"
    ]
   },
   {
@@ -1287,7 +1287,7 @@
    "source": [
     "## Anpassung  \n",
     "\n",
-    "Unter Anpassung in der Leitungstheorie versteht man, dass Elemente der Signalkette reflexionsfrei gekoppelt werden \\$ |\\underline{r}(0)| = 0 \\$. Die Gleichung aus dem Abschnitt [Leitungstransformation](Leitungstranformation) kann dafür gelöst werden. Eine Alternative bietet das Smith Diagramm. Es geht also darum Lasten die eine Impedanz ungleich der Leitungsimpedanz haben Reflexionsfrei anzuschließen.  \n",
+    "Unter Anpassung in der Leitungstheorie versteht man, dass Elemente der Signalkette reflexionsfrei gekoppelt werden \\$ |\\underline{r}(0)| = 0 \\$. Die Gleichung aus dem Abschnitt [Leitungstransformation](Leitungstranformation) kann dafür gelöst werden. Eine Alternative bietet das Smith Diagramm. Es geht also darum Lasten, die eine Impedanz ungleich der Leitungsimpedanz haben, reflexionsfrei anzuschließen.  \n",
     "Es ist zwischen der Leitungsanpassung und der Lei**s**tungsanpassung zu unterscheiden. Hier soll die Leitungsanpassung betrachtet werden. Leitungsanpassung liegt vor, wenn der Leitungswiderstand \\$\\underline{Z}_L \\$ gleich dem Abschlusswiderstand \\$\\underline{Z}_2$ ist. Leistungsanpassung dazu würde vorliegen, wenn \\$ \\underline{Z}_2 \\$ gleich dem konjugiert-komplexen Leitungswiderstand \\$ \\underline{Z}_L^* \\$ entspricht."
    ]
   },
@@ -1296,7 +1296,7 @@
    "id": "856c1807-766c-460e-9902-3e1f9ea9a87a",
    "metadata": {},
    "source": [
-    "Die Fragestellung lautet, wie die Widerstände angepasst werden wenn diese nicht gleich groß sind.\n",
+    "Die Fragestellung lautet, wie die Widerstände angepasst werden, wenn diese nicht gleich groß sind.\n",
     "```{figure} ./images/Anpassung1.png\n",
     ":name: Anpassungsproblem\n",
     ":width: 400px\n",
@@ -1304,7 +1304,7 @@
     "Anpassungsproblem\n",
     "```\n",
     "\n",
-    "Wenn der Leitungswiderstand \\$ \\underline{Z}_L \\$ kleiner als der Lastwiderstand \\$ \\underline{Z}_2 \\$ ist muss die folgende Kompensationsschaltung verwendet werden.\n",
+    "Wenn der Leitungswiderstand \\$ \\underline{Z}_L \\$ kleiner als der Lastwiderstand \\$ \\underline{Z}_2 \\$ ist, muss die folgende Kompensationsschaltung verwendet werden.\n",
     "```{figure} ./images/AnpassungZLsmallerZ2.png\n",
     ":name: AnpassungZLsmallerZ2\n",
     ":width: 400px\n",
@@ -1312,7 +1312,7 @@
     "Anpassung bei \\$ \\underline{Z}_L < \\underline{Z}_2 \\$\n",
     "```\n",
     "\n",
-    "Wenn der Leitungswiderstand \\$ \\underline{Z}_L \\$ größe als der Lastwiderstand \\$ \\underline{Z}_2 \\$ ist muss die folgende Kompensationsschaltung verwendet werden.\n",
+    "Wenn der Leitungswiderstand \\$ \\underline{Z}_L \\$ größer als der Lastwiderstand \\$ \\underline{Z}_2 \\$ ist, muss die folgende Kompensationsschaltung verwendet werden.\n",
     "```{figure} ./images/AnpassungZLbiggerZ2.png\n",
     ":name: AnpassungZLbiggerZ2\n",
     ":width: 400px\n",
