--- a/Signaldarstellung.ipynb
+++ b/Signaldarstellung.ipynb
@@ -247,7 +247,7 @@
    "id": "ca57f566",
    "metadata": {},
    "source": [
-    "Ändert sich ein Signal nicht mit der Zeit sondern mit der Frequenz so ist eine Darstellung von Vorteil bei der die Frequenz auf der horizontalen Achse aufgetragen wird."
+    "Ändert sich ein Signal nicht mit der Zeit, sondern mit der Frequenz, so ist eine Darstellung von Vorteil, bei der die Frequenz auf der horizontalen Achse aufgetragen wird."
    ]
   },
   {
